--- a/professores/templates/professores/resultado_bancas.html
+++ b/professores/templates/professores/resultado_bancas.html
@@ -99,10 +99,7 @@
   </ul>
 
   {% for banca in projeto.banca_set.all %}
-
-    {% include "dado_banca.html" %}
-    <br>
-    
+    {% include "dado_banca.html" %}<br>
   {% endfor %}
 
   <b>
