botão para avaliação de pares em projeto completo

--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -54,7 +54,7 @@
 
   <span class="titulo">
     <span lang="pt">{{ titulo.pt }}</span>
-    <span lang="en">{{ titulo.en }}</span>
+    <span lang="en" style="display: none;">{{ titulo.en }}</span>
   </span>
 
   <h4>
@@ -63,14 +63,14 @@
   {% if projeto.titulo_final and projeto.titulo_final != projeto.proposta.titulo %}
     <span style="font-size: small; padding-left: 0.7em;"><b>
       <span lang="pt">Título original da proposta:</span>
-      <span lang="en">Original title of the proposal:</span>
+      <span lang="en" style="display: none;">Original title of the proposal:</span>
     </b> {{projeto.proposta.titulo}}</span>
   {% endif %}
   </h4>
 
   <strong>
     <span lang="pt">Semestre:</span>
-    <span lang="en">Semester:</span>
+    <span lang="en" style="display: none;">Semester:</span>
   </strong> {{projeto.ano}}.{{projeto.semestre}}<br>
 
   {% include "tipo_projeto.html" with com_tipo=True %}
@@ -79,7 +79,7 @@
     <br><div class="resumo" style="margin-top: 8px;">
       <strong>
         <span lang="pt">Resumo do Projeto (escrito por estudantes):</span>
-        <span lang="en">Project Summary (written by students):</span>
+        <span lang="en" style="display: none;">Project Summary (written by students):</span>
       </strong>
       {{ projeto.resumo|linebreaks }}
     </div>
@@ -89,7 +89,7 @@
     <br><div class="abstract" style="margin-top: 8px;">
       <strong>
         <span lang="pt">Resumo em Inglês do Projeto (escrito por estudantes):</span>
-        <span lang="en">Project Summary in English (written by students):</span>
+        <span lang="en" style="display: none;">Project Summary in English (written by students):</span>
       </strong>
       {{ projeto.abstract|linebreaks }}
     </div>
@@ -99,7 +99,7 @@
     <br><div class="palavras_chave" style="margin-top: 8px;">
       <strong>
         <span lang="pt">Palavras-chave (escrito por estudantes):</span>
-        <span lang="en">Keywords (written by students):</span>
+        <span lang="en" style="display: none;">Keywords (written by students):</span>
       </strong>
       {{ projeto.palavras_chave|linebreaks }}
     </div>
@@ -121,7 +121,7 @@
 
   <h5>
     <span lang="pt">Organização:</span>
-    <span lang="en">Organization:</span>
+    <span lang="en" style="display: none;">Organization:</span>
     {% if projeto.organizacao %}
       {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
         <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{ projeto.organizacao.nome }}</a>
@@ -130,7 +130,7 @@
       {% endif %}
     {% else %}
       <span lang="pt">ORGANIZAÇÃO</span>
-      <span lang="en">ORGANIZATION</span>
+      <span lang="en" style="display: none;">ORGANIZATION</span>
     {% endif %}
   </h5>
 
@@ -139,7 +139,7 @@
       <span>
       &nbsp;&nbsp;&nbsp;
       <span lang="pt">Colaboração:</span>
-      <span lang="en">Collaboration:</span>
+      <span lang="en" style="display: none;">Collaboration:</span>
       <a href="{% url 'organizacao_completo' conexao.parceiro.organizacao.id %}">
         {{conexao.parceiro.organizacao}}
       </a>
@@ -150,7 +150,7 @@
   <div class="endereco" style="margin-top: 8px;">
     <p><strong>
       <span lang="pt">Endereço:</span>
-      <span lang="en">Address:</span>
+      <span lang="en" style="display: none;">Address:</span>
     </strong> <a style="display: inline-block; padding-left: 0.7em;" href="http://maps.google.com/maps?q={{projeto.organizacao.endereco}}">{{ projeto.organizacao.endereco|linebreaks }}</a></p>
   </div>
   
@@ -166,7 +166,7 @@
     <div class="descricao" style="margin-top: 8px;">
       <strong>
         <span lang="pt">Descrição da Proposta do Projeto (escrito por parceiro):</span>
-        <span lang="en">Description of the Project Proposal (written by partner):</span>
+        <span lang="en" style="display: none;">Description of the Project Proposal (written by partner):</span>
       </strong>
       {{ projeto.proposta.descricao|linebreaks|bleach_urlize|safe }}
     </div><br>
@@ -176,7 +176,7 @@
     <div class="expectativas" style="margin-top: 8px;">
       <strong>
         <span lang="pt">Expectativas de resultados/entregas (escrito por parceiro):</span>
-        <span lang="en">Expectations of results/deliverables (written by partner):</span>
+        <span lang="en" style="display: none;">Expectations of results/deliverables (written by partner):</span>
       </strong>
       {{ projeto.proposta.expectativas|linebreaks|bleach_urlize|safe }}
     </div><br>
@@ -186,7 +186,7 @@
     <div class="recusos" style="margin-top: 8px;">
       <strong>
         <span lang="pt">Recursos a serem disponibilizados aos estudantes (escrito por parceiro):</span>
-        <span lang="en">Resources to be made available to students (written by partner):</span>
+        <span lang="en" style="display: none;">Resources to be made available to students (written by partner):</span>
       </strong>{{ projeto.proposta.recursos|linebreaks|bleach_urlize|safe }}
     </div><br>
   {% endif %}
@@ -195,7 +195,7 @@
     <div class="informacoes" style="margin-top: 8px;">
       <strong>
         <span lang="pt">Informações sobre a organização:</span>
-        <span lang="en">Information about the organization:</span>
+        <span lang="en" style="display: none;">Information about the organization:</span>
       </strong> {{ projeto.organizacao.informacoes|linebreaks|bleach_urlize|safe }}
     </div><br>
   {% endif %}
@@ -204,7 +204,7 @@
     <div class="departamento" style="margin-top: 8px;">
       <strong>
         <span lang="pt">Informações sobre o departamento na organização:</span>
-        <span lang="en">Information about the department in the organization:</span>
+        <span lang="en" style="display: none;">Information about the department in the organization:</span>
       </strong> {{ projeto.proposta.departamento|linebreaks|bleach_urlize|safe }}
     </div><br>
   {% endif %}
@@ -212,7 +212,7 @@
   {% if projeto.proposta.anexo %}
     <br><strong>
       <span lang="pt">Anexo (fornecido por parceiro):</span>
-      <span lang="en">Attachment (provided by partner):</span>
+      <span lang="en" style="display: none;">Attachment (provided by partner):</span>
     </strong>
     <a class="text-success" href="http://{{request.get_host}}{{projeto.proposta.anexo.url}}">{{projeto.proposta.anexo}}</a>
     <br><br>
@@ -221,7 +221,7 @@
   <div class="conexoes" style="margin-top: 8px;">
     <strong>
       <span lang="pt">Conexões:</span>
-      <span lang="en">Connections:</span>
+      <span lang="en" style="display: none;">Connections:</span>
     </strong>
     {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
       <small class="esconder"><a style="vertical-align: 0px;" href="{% url 'seleciona_conexoes' %}?projeto={{projeto.id}}">&#x1F517;</a></small>
@@ -241,7 +241,7 @@
               <a href="mailto:{{conexao.parceiro.user.email}}"> &lt;{{conexao.parceiro.user.email}}&gt;</a>
             {% else %}
               <span lang="pt">PARCEIRO NÃO CADASTRADO</span>
-              <span lang="en">ORGANIZATION NOT REGISTERED</span>
+              <span lang="en" style="display: none;">ORGANIZATION NOT REGISTERED</span>
             {% endif %}
             {% for papel in conexao.get_papeis %}
               <span class="opt_full">[{{papel.0}}]</span>
@@ -259,7 +259,7 @@
             {% else %}
               <span style="color: lightgrey;">
                 <span lang="pt">PARCEIRO NÃO CADASTRADO</span>
-                <span lang="en">ORGANIZATION NOT REGISTERED</span>
+                <span lang="en" style="display: none;">ORGANIZATION NOT REGISTERED</span>
               </span>
             {% endif %}
             <span  style="color: lightgrey; border: 0px; padding-left: 12px;">
@@ -275,7 +275,7 @@
       </ul>
     {% else %}
       <span lang="pt">Nenhuma conexão específica para esse projeto declarada.</span>
-      <span lang="en">No specific connection declared for this project.</span>
+      <span lang="en" style="display: none;">No specific connection declared for this project.</span>
     {% endif %}
     
   </div>
@@ -283,9 +283,15 @@
   <hr>
   {% if projeto.orientador %}
     {% if projeto.proposta.intercambio %}
-      <h5>Professor{% if projeto.orientador.user.genero == 'F' %}a{% endif %} Responsável: </h5>
+      <h5>
+        <span lang="pt">Professor{% if projeto.orientador.user.genero == 'F' %}a{% endif %} Responsável:</span>
+        <span lang="en" style="display: none;">Responsible Professor:</span>
+      </h5>
     {% else %}
-      <h5>Orientador{% if projeto.orientador.user.genero == 'F' %}a{% endif %}: </h5>
+      <h5>
+        <span lang="pt">Orientador{% if projeto.orientador.user.genero == 'F' %}a{% endif %}:</span>
+        <span lang="en" style="display: none;">Advisor:</span>
+      </h5>
     {% endif %}
     <div style="margin-left: 0.3em;">
       &#8614;
@@ -297,13 +303,20 @@
       <a href="mailto:{{projeto.orientador.user.email}}"> &lt;{{projeto.orientador.user.email}}&gt;</a>
     </div>
   {% else %}
-    <h4>Orientador: Não definido</h4>
+    <h4>
+      <span lang="pt">Orientador: Não definido</span>
+      <span lang="en" style="display: none;">Advisor: Not defined</span>
+    </h4>
   {% endif %}
 
   {% if coorientadores %}
     <br>
     <div style="margin-top: 3px;">
-      <strong>&nbsp;&nbsp;coorientação:</strong>
+      <strong>
+        &nbsp;&nbsp;
+        <span lang="pt">coorientação:</span>
+        <span lang="en" style="display: none;">co-advisorship:</span>
+      </strong>
     </div>
     <ul>
     {% for coorientador in coorientadores %}
@@ -352,9 +365,14 @@
   </ul>
 
   {% if medias_oo %}
-    <hr><h4>Médias de Grupo:</h4>
+    <hr>
+    <h4>
+      <span lang="pt">Médias de Grupo:</span>
+      <span lang="en" style="display: none;">Group Averages:</span>
+    </h4>
 
-    Médias:
+    <span lang="pt">Médias:</span>
+    <span lang="en" style="display: none;">Averages:</span>
     {% for key, value in medias_oo.media_grupo.items %}
       {% if value.media >= 0 %}
         <span style="white-space: nowrap;">{{key.titulo}}={{value.media|stringformat:".1f"}}</span>{% if not forloop.last %}, {% endif %}
@@ -416,7 +434,10 @@
   {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
   {% if projeto.has_relatos %}  
     <hr>
-    <h4>Relatos Quinzenais</h4>
+    <h4>
+      <span lang="pt">Relatos Quinzenais:</span>
+      <span lang="en" style="display: none;">Biweekly Reports:</span>
+    </h4>
     {% include "relatos.html" with alocacoes=alocacoes|sem_externos %}
   {% endif %}
   {% endif %}
@@ -432,7 +453,10 @@
   {% endwith %}
   
   {% if projeto.pastas_do_projeto %}
-    <h4>Pastas do projeto:</h4>
+    <h4>
+      <span lang="pt">Pastas do projeto:</span>
+      <span lang="en" style="display: none;">Project Folders:</span>
+    </h4>
     <div style="display: flex; align-items: flex-start;">
       <div>&#128193;&nbsp;</div>
       <div>
@@ -442,7 +466,9 @@
     <br>
   {% endif %}
 
-  <h4>Documentos:
+  <h4>
+    <span lang="pt">Documentos:</span>
+    <span lang="en" style="display: none;">Documents:</span>
     {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
       <small class="esconder">
         <a class="open-documento" data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id %}">&#10133;</a>
@@ -455,7 +481,9 @@
 
   {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
     <hr>
-    <h4>Certificados:
+    <h4>
+      <span lang="pt">Certificados:</span>
+      <span lang="en" style="display: none;">Certificates:</span>
       {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
         <small class="esconder">
           <a href="{% url 'carregar_certificado' %}">&#10133;</a>
@@ -470,16 +498,24 @@
   {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
   {% if projeto.encontro_set.all %}
       <hr>
-      <h4>Mentorias:<br></h4>
+      <h4>
+        <span lang="pt">Mentorias:</span>
+        <span lang="en" style="display: none;">Mentorships:</span>
+      </h4>
       <ul>
           {% for dinamica in projeto.encontro_set.all %} 
               <li>
                   {{dinamica.startDate|date:'j \d\e F \d\e Y \d\a\s H:i'}} às {{dinamica.endDate|date:'H:i'}}
                   <ul>
                     {% if dinamica.location %}
-                      <li> local:
+                      <li>
+                        <span lang="pt">Local:</span>
+                        <span lang="en" style="display: none;">Location:</span>
                       {% if dinamica.url_location %}
-                        <a href="{{dinamica.location}}">link vídeo-conferência</a>
+                        <a href="{{dinamica.location}}">
+                          <span lang="pt">link vídeo-conferência</span>
+                          <span lang="en" style="display: none;">video-conference link</span>
+                        </a>
                       {% else %}
                         <span style="word-break: break-all;">
                           {{dinamica.location}}
@@ -488,7 +524,9 @@
                       
                     {% endif %}
                     {% if dinamica.facilitador %}
-                      <li>facilitador: 
+                      <li>
+                        <span lang="pt">Facilitador:</span>
+                        <span lang="en" style="display: none;">Facilitator:</span>
                         <a href="{% url 'user_detail' dinamica.facilitador.id %}">
                           {{dinamica.facilitador}}
                         </a>
@@ -504,7 +542,11 @@
   {% if projeto.ano >= 2024 %} {% comment %} Só começamos a fazer a partir de 2024 {% endcomment %}
     {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
       <hr>
-      <h4>Alocação Semanal dos Estudantes:<br></h4>
+      <h4>
+        <span lang="pt">Alocação Semanal dos Estudantes:</span>
+        <span lang="en" style="display: none;">Weekly Allocation of Students:</span>
+      </h4>
+      <br>
       {% include "mostra_horarios.html" %}
     {% endif %}
   {% endif %}
@@ -512,41 +554,68 @@
   {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
 
     <hr>
-    <div style="max-width: 80em; text-align: center;">
+    <div style="max-width: 95em; text-align: center;">
 
       <a class="btn btn-primary mb-1 mt-2" style="width: 13em;"
-      data-toggle="tooltip" data-html="true" animation="true" title="Acessa a poposta do projeto"
-      href="{% url 'proposta_completa' projeto.proposta.id %}">Proposta</a>
+       data-toggle="tooltip" data-html="true" animation="true" title="Acessa a poposta do projeto"
+       href="{% url 'proposta_completa' projeto.proposta.id %}">
+        <span lang="pt">Proposta</span>
+        <span lang="en" style="display: none;">Proposal</span>
+      </a>
 
       <a class="btn btn-primary mb-1 mt-2" style="width: 13em;"
-      data-toggle="tooltip" data-html="true" animation="true" title="Acessa as avaliações das bancas"
-      href="{% url 'resultado_bancas' projeto.id %}">Resultado Bancas</a>
+       data-toggle="tooltip" data-html="true" animation="true" title="Acessa as avaliações das bancas"
+       href="{% url 'resultado_bancas' projeto.id %}">
+        <span lang="pt">Resultado Bancas</span>
+        <span lang="en" style="display: none;">Exam. Boards Results</span>
+      </a>
 
       <a class="btn btn-primary mb-1 mt-2" style="width: 13em;"
-      data-toggle="tooltip" data-html="true" animation="true" title="Acessa os agendamentos das bancas"
-      href="{% url 'bancas_lista' projeto.id %}">Agendamentos</a>
+       data-toggle="tooltip" data-html="true" animation="true" title="Acessa os agendamentos das bancas"
+       href="{% url 'bancas_lista' projeto.id %}">
+        <span lang="pt">Agendamento Bancas</span>
+        <span lang="en" style="display: none;">Exam. Boards Schedule</span>
+      </a>
 
       {% if projetos_avancados %}
         <a class="btn btn-primary mb-1 mt-2" 
-        data-toggle="tooltip" data-html="true" animation="true" title="Acessa a versão avançada desse projeto"
-        href="{% url 'projeto_avancado' projeto.id %}" style="width: 13em;">Avançado</a>
+         data-toggle="tooltip" data-html="true" animation="true" title="Acessa a versão avançada desse projeto"
+         href="{% url 'projeto_avancado' projeto.id %}" style="width: 13em;">
+          <span lang="pt">Versão Avançada</span>
+          <span lang="en" style="display: none;">Advanced Version</span>
+        </a>
       {% else %}
-      <a class="btn btn-primary mb-1 mt-2" 
-        data-toggle="tooltip" data-html="true" animation="true" title="Cria uma versão avançada desse projeto"
-        onclick="cria_avancado()" style="color:white; width: 13em;">Cria Avançado</a>
+        <a class="btn btn-primary mb-1 mt-2" 
+         data-toggle="tooltip" data-html="true" animation="true" title="Cria uma versão avançada desse projeto"
+         onclick="cria_avancado()" style="color:white; width: 13em;">
+          <span lang="pt">Cria Avançado</span>
+          <span lang="en" style="display: none;">Create Advanced</span>
+        </a>
       {% endif %}
 
       <a class="btn btn-primary mb-1 mt-2" style="width: 13em;"
-      data-toggle="tooltip" data-html="true" animation="true" title="Permite avaliar as entregas do projeto"
-      href="{% url 'avaliar_entregas' projeto.id %}">Avaliar Entregas</a>
+       data-toggle="tooltip" data-html="true" animation="true" title="Permite avaliar as entregas do projeto"
+       href="{% url 'avaliar_entregas' projeto.id %}">
+        <span lang="pt">Avaliar Entregas</span>
+        <span lang="en" style="display: none;">Evaluate Deliveries</span>
+      </a>
 
       <a class="btn btn-primary mb-1 mt-2" style="width: 13em;"
-      data-toggle="tooltip" data-html="true" animation="true" title="Permite editar alguns campos do projeto"
-      href="{% url 'editar_projeto' projeto.id %}">Editar</a>
+       data-toggle="tooltip" data-html="true" animation="true" title="Visualiza as avaliações de pares"
+       href="{% url 'avaliacoes_pares' projeto.id %}">
+        <span lang="pt">Avaliação de Pares</span>
+        <span lang="en" style="display: none;">Peer Evaluation</span>
+      </a>
+
+      <a class="btn btn-primary mb-1 mt-2" style="width: 13em;"
+       data-toggle="tooltip" data-html="true" animation="true" title="Permite editar alguns campos do projeto"
+       href="{% url 'editar_projeto' projeto.id %}">
+        <span lang="pt">Editar</span>
+        <span lang="en" style="display: none;">Edit</span>
+      </a>
 
     </div>
-    <p>&nbsp;</p>
-
+    
     {% if not projetos_avancados %}
       <script>
         function cria_avancado() {
