mostrando pendências de professores

--- a/operacional/templates/operacional/operacional.html
+++ b/operacional/templates/operacional/operacional.html
@@ -13,6 +13,11 @@
   <span lang="pt">Listas de e-mails</span>
   <span lang="en" style="display: none;">E-mail lists</span>
 </a><br>
+<a href="{% url 'pendencias_professores' %}">
+  <span lang="pt">Pendencias professores</span>
+  <span lang="en" style="display: none;">Professors' pending tasks</span>
+</a><br>
+
 <br>
 
 <h5>
