--- a/professores/templates/professores/avaliar_bancas.html
+++ b/professores/templates/professores/avaliar_bancas.html
@@ -40,74 +40,83 @@
 
   <div class="atualizar">
 
-    {% if projeto %}
-      <strong>
-        <span lang="pt">Projeto:</span>
-        <span lang="en" style="display: none;">Project:</span>
-      </strong>
+    {% for banca in bancas %}
 
-      {% if projeto.organizacao %}
-        [<a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{projeto.organizacao}}</a>]
-      {% endif %}
+      {% with projeto=banca.projeto %}
 
-      {% if projeto %}
-        <a href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a><br>
-      {% endif %}
+        {% ifchanged projeto %}
+          {% if projeto %}
+            <strong>
+              <span lang="pt">Projeto:</span>
+              <span lang="en" style="display: none;">Project:</span>
+            </strong>
 
-      <strong>
-        <span lang="pt">Semestre:</span>
-        <span lang="en" style="display: none;">Semester:</span>
-      </strong> {{projeto.ano}}.{{projeto.semestre}}<br>
+            {% if projeto.organizacao %}
+              [<a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{projeto.organizacao}}</a>]
+            {% endif %}
 
-      {% if projeto.orientador %}
-        <strong>
-          <span lang="pt">Orientador{% if projeto.orientador.user.genero == "F" %}a{% endif %}:</span>
-          <span lang="en" style="display: none;">Advisor:</span>
-        </strong>
-        <a href="{% url 'professor_detail' projeto.orientador.id %}">
-          {{projeto.orientador.user.get_full_name}}
-        </a>
-        <br>
-      {% endif %}
+            {% if projeto %}
+              <a href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a><br>
+            {% endif %}
 
-      {% with coorientadores=projeto.coorientador_set.all %}
-        {% if coorientadores %}
-          <strong>
-            <span lang="pt">Coorientador:</span>
-            <span lang="en" style="display: none;">Co-advisor:</span>
-          </strong>
-          {% for coorientador in coorientadores %}
-              <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
-                {{coorientador.usuario.get_full_name}} 
+            <strong>
+              <span lang="pt">Semestre:</span>
+              <span lang="en" style="display: none;">Semester:</span>
+            </strong> {{projeto.ano}}.{{projeto.semestre}}<br>
+
+            {% if projeto.orientador %}
+              <strong>
+                <span lang="pt">Orientador{% if projeto.orientador.user.genero == "F" %}a{% endif %}:</span>
+                <span lang="en" style="display: none;">Advisor:</span>
+              </strong>
+              <a href="{% url 'professor_detail' projeto.orientador.id %}">
+                {{projeto.orientador.user.get_full_name}}
               </a>
-              {% if not forloop.last %}; {% endif %}
-          {% endfor %}
-          </span>
-          <br>
-        {% endif %}
+              <br>
+            {% endif %}
+
+            {% with coorientadores=projeto.coorientador_set.all %}
+              {% if coorientadores %}
+                <strong>
+                  <span lang="pt">Coorientador:</span>
+                  <span lang="en" style="display: none;">Co-advisor:</span>
+                </strong>
+                {% for coorientador in coorientadores %}
+                    <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
+                      {{coorientador.usuario.get_full_name}} 
+                    </a>
+                    {% if not forloop.last %}; {% endif %}
+                {% endfor %}
+                </span>
+                <br>
+              {% endif %}
+            {% endwith %}
+
+            {% include "tipo_projeto.html" with com_tipo=True projeto=projeto %}
+            
+            <strong style="display: inline-block; margin-top: 6px;">
+              <span lang="pt">Grupo:</span>
+              <span lang="en" style="display: none;">Group:</span>
+            </strong>
+            <ul>
+            {% for alocacao in projeto.alocacao_set.all %}
+              <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
+                <li>
+                  {{alocacao.aluno.user.get_full_name}} 
+                  [{{ alocacao.aluno.curso2 }}]
+                  &lt;{{alocacao.aluno.user.email}}&gt; 
+                </li>
+              </a>
+            {% endfor %}
+            </ul>
+          {% endif %}
+
+        {% endifchanged %}
+
+        {% include "dado_banca.html" %}<br>
+
       {% endwith %}
 
-      {% include "tipo_projeto.html" with com_tipo=True projeto=projeto %}
-      
-      <strong style="display: inline-block; margin-top: 6px;">
-        <span lang="pt">Grupo:</span>
-        <span lang="en" style="display: none;">Group:</span>
-      </strong>
-      <ul>
-      {% for alocacao in projeto.alocacao_set.all %}
-        <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
-          <li>
-            {{alocacao.aluno.user.get_full_name}} 
-            [{{ alocacao.aluno.curso2 }}]
-            &lt;{{alocacao.aluno.user.email}}&gt; 
-          </li>
-        </a>
-      {% endfor %}
-      </ul>
-    {% endif %}
-
-    {% for banca in bancas %}
-      {% include "dado_banca.html" %}<br>
     {% endfor %}
 
     <b>
