informações são apresentadas em multilingua

--- a/professores/templates/professores/banca_avaliar.html
+++ b/professores/templates/professores/banca_avaliar.html
@@ -218,7 +218,7 @@
       $("body").on("click", "#language_button", function(e) {
         if($('[lang="en"]').is(":visible")) {
           $("#selecione_avaliador").text(" -- select evaluator -- ");
-          $("#MembBanca").attr("label", "Evaluation Committee Members");
+          $("#MembBanca").attr("label", "Examination Board");
           $("#ListaComp").attr("label", "Complete List");
         } else {
           $("#selecione_avaliador").text(" -- selecione um avaliador -- ");
