--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -100,7 +100,7 @@
 {% block content %}
 
   {% include "edicoes.html" %}
-  {% include "informacoes.html" %}
+  {% include "informacoes_ml.html" %}
 
   <div class="atualizar">
 
@@ -116,7 +116,7 @@
               <th colspan="2" class="text-center"><b><span lang="pt">Relatórios</span><span lang="en">Reports</span></b></th>
               <th colspan="3" class="text-center">
                 <b>
-                  <span lang="pt">Bancas</span><span lang="en">Evaluation Committee</span>
+                  <span lang="pt">Bancas</span><span lang="en">Exam. Board</span>
                   <span style="cursor:pointer;" class="fas fa-filter esconder"
                   onclick="togglePanel()"></span>
                 </b>
