--- a/projetos/templates/projetos/analise_notas.html
+++ b/projetos/templates/projetos/analise_notas.html
@@ -346,7 +346,7 @@
                   options: {
                       title: {
                           display: true,
-                          text: '{% if lingua == "pt" %}Banca Intermediária{% else %}Interim Evaluation Committee{% endif %}',
+                          text: '{% if lingua == "pt" %}Banca Intermediária{% else %}Interim Examination Board{% endif %}',
                           position: "top"
                       },
                       tooltips: tooltips,
@@ -420,7 +420,7 @@
                   options: {
                       title: {
                           display: true,
-                          text: '{% if lingua == "pt" %}Banca Final{% else %}Final Evaluation Committee{% endif %}',
+                          text: '{% if lingua == "pt" %}Banca Final{% else %}Final Examination Board{% endif %}',
                           position: "top"
                       },
                       tooltips: tooltips,
