--- a/propostas/templates/propostas/mapeamento_estudante_projeto.html
+++ b/propostas/templates/propostas/mapeamento_estudante_projeto.html
@@ -82,7 +82,7 @@
 {% block content %}
 
   {% include "edicoes.html" with n_todas=True %}
-  {% include "informacoes.html" %}
+  {% include "informacoes_ml.html" %}
 
   <div class="atualizar">
     
