--- a/administracao/templates/administracao/configurar.html
+++ b/administracao/templates/administracao/configurar.html
@@ -55,7 +55,7 @@
       <span lang="en">Maximum deadline for evaluators to fill out the evaluation of the examination board:</span>
     </label> <input id="prazo_preencher_banca" name="prazo_preencher_banca" style="text-align:right;" type="number" min="0" max="9999" step="1" value="{{configuracao.prazo_preencher_banca}}"/> dias<br>
     <small lang="pt">Os relatório ficarão disponíveis até o prazo definido, após o prazo, o sistema não permitirá mais a visualização do relatório de banca.</small>
-    <small lang="en">The reports will be available until the deadline defined, after the deadline, the system will no longer allow the visualization of the report to the evaluation committee.</small>
+    <small lang="en">The reports will be available until the deadline defined, after the deadline, the system will no longer allow the visualization of the report to the examination board.</small>
     
     <br><hr><br>
 
