--- a/operacional/templates/operacional/emails.html
+++ b/operacional/templates/operacional/emails.html
@@ -143,7 +143,7 @@
           </a>
           <a id="Bancas" href="" target="_blank">
             <button class="btn btn-outline-secondary btn-sm ml-1" type="button">
-              <span lang="pt">Bancas</span><span lang="en">Evaluation Committees</span>
+              <span lang="pt">Bancas</span><span lang="en">Examination Boards</span>
             </button>
           </a>
         </div>
