--- a/professores/templates/professores/bancas_tabela_alocacao_completa.html
+++ b/professores/templates/professores/bancas_tabela_alocacao_completa.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-  {% include "informacoes.html" %}
+  {% include "informacoes_ml.html" %}
   <br>
 
   <div class="table-responsive">
@@ -23,10 +23,19 @@
         <table id="MembrosTable" class="table table-bordered table-hover table-sm" style="width: auto;">
           <thead class="table-info">
             <tr>
-              <th scope="col" class="text-center">Nome</th>
+              <th scope="col" class="text-center">
+                <span lang="pt">Nome</span>
+                <span lang="en" style="display:none;">Name</span>
+              </th>
               <th scope="col" class="text-center">e-mail</th>
-              <th scope="col" class="text-center">Quant.</th>
-              <th scope="col" class="text-center">Projetos</th>
+              <th scope="col" class="text-center">
+                <span lang="pt">Quant.</span>
+                <span lang="en" style="display:none;">Quant.</span>
+              </th>
+              <th scope="col" class="text-center">
+                <span lang="pt">Projetos</span>
+                <span lang="en" style="display:none;">Projects</span>
+              </th>
             </tr>
           </thead>
           {% for membro, bancas in membros.items %}
