--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -22,7 +22,7 @@
 {% block content %}
 
   {% include "edicoes.html" with n_todas=True %}
-  {% include "informacoes.html" %}
+  {% include "informacoes_ml.html" %}
 
   <div class="atualizar">
       {% include "tabelas_top_ml.html" with tabela="Estudantes" cabecalhos=cabecalhos %}
