--- a/estudantes/templates/estudantes/alocacao_semanal.html
+++ b/estudantes/templates/estudantes/alocacao_semanal.html
@@ -10,6 +10,15 @@
 
 {% block content %}
 
+
+  <div style="margin-bottom: 3px;">
+    <b>
+      <span lang="pt">Projeto:</span>
+      <span lang="en" style="display:none">Project:</span>
+    </b>
+    {{ projeto }}
+  </div>
+
   {% include "mostra_horarios.html" %}
 
 {% endblock %}
